no me acuerdo que cambios hice

--- a/EstiloCostos.css
+++ b/EstiloCostos.css
@@ -54,8 +54,8 @@ body {
 }
 
 #costos th {
-    background-color: #254ECB;
-    color: white;
+    background-color: #09172B;
+    color: #ccd6f6;
     padding: 15px;
     text-align: center;
     font-size: 1.1em;
