no se que hice alv ya no le avance desde el 15

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -8,7 +8,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #b2b5b5;
+            background: #353636;
             color: #333;
         }
 
